--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">Test</string>
+
+    <string name="title_activity_fullscreen">FullscreenActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_activity_cavas">CavasActivity</string>
+    <string name="title_activity_matrix">MatrixActivity</string>
+    <string name="title_color_matrix">color_matrix</string>
+    <string name="title_translation_matrix">translation_matrix</string>
+    <string name="title_xfermode">xfermode</string>
+    <string name="title_shader">shader</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
 </resources>
